app/javascript/stylesheets/shared/_base.scss
* { box-sizing: border-box; }

body, p, h1, h2, h3, h4, h5, h6, a, ul, li, span, div, form,
input, button, textarea, main, article, aside, header, footer {
  padding: 0;
  margin: 0;
}

body {
  background-color: $bg-light;
  font-family: 'Montserrat', sans-serif;
}

p, a, span {
  font-size: $fs-sm;
}

h1 { font-size: $h1; }
h2 { font-size: $h2; }
h3 { font-size: $h3; }
h4 { font-size: $h4; }
h5 { font-size: $h5; }
h6 { font-size: $h6; }

a { text-decoration: none; }
li { list-style: none; }

input, button {
  border: $border-1 solid #bdbdbd;
  border-radius: $border-radius-3;
  padding: $padding-5;
  outline: none;
}

input {
  font-size: $fs-sm;
}

